fixed div spacing

--- a/client-react/src/App.css
+++ b/client-react/src/App.css
@@ -24,7 +24,7 @@ body {
     border-color: #007053;
     color: #F8F8F8;
     margin-top: 5px;
-    width:100%;
+    width:95%;
 }
 
 .textfield:focus{
